# project_BDII

./: .gitignore  CMakeLists.txt  ExtendibleHashing.h  README.md  ReadCSV.h  RecordSeq.h  Sequential.cpp  Sequential.h  app.py  avlFile.h  borrador.cpp  main.cpp  mainPrueb.cpp  parserSQL.h  sample_queries.txt  sample_queries2.txt  test.csv  tokenS.cpp  tokenS.h
benchmark/: time_test.cpp
binding/: CMakeLists.txt  binder.cpp  setup.py  testing.py
binding/file_organization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpp/: setup.py  wrappers.cpp
estructuras/: B+.h  ExtendibleHashing.h  FileStructureBase.h  ReadCSV.h  Sequential.h  avlFile.h
frontend/: app.py  index.html  playstore_mini.csv  utils.py
frontend/static/: styles.css
frontend/templates/: index.html
parser/: mainPrueb.cpp  parserSQL.cpp  parserSQL.h  tokenS.cpp
